# pixelti

./: .gitignore  .pylintrc  MANIFEST.in  Makefile  README.md  cli.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  temp.py
app/cli/: generate_pixelti.py  generator.py  handler.py
assets/pallettes/: arne-199x.hex  miyazaki-16.hex
core/: display.py  pallete.py  pixelti.py
lib/: utils.py
pixelti/: __init__.py  cli.py  core.py  display.py  pallette.py  version.py
pixelti/app/cli/: generate_pixelti.py
pixelti/assets/pallettes/: autumn-thanksgiving-meal.hex
pixelti/lib/: utils.py
