[metadata]
name = pixelti
version = attr: pixelti.version.__version__
author = titanabrian
url = https://github.com/titancodehub/pixelti
description = A pixel art creation tool
long_description = file: README.md
long_description_content_type = text/markdown
keywords = pixel, art, creative
classifiers =
    Programming Language :: Python :: 3
